=======
Changes
=======

3.6.2 (unreleased)
------------------

- Fallback to traceback.format_tb when the formatter is called recursively.
  i.e. Don't let errors in the formatter pass silently.

3.6.1 (2010-07-06)
------------------

- Fixed tests to work under Python 2.7.

- PEP8 cleanup and removed obsolete build infrastructure files.


3.6.0 (2010-05-02)
------------------

- Added support to bootstrap on Jython.

- Added Python 3 support.

- The dependency on zope.testing seemed spurious, possibly a rest of a real
  dependency that is gone now. I removed it.


3.5.2 (2008-04-30)
------------------

- Updated CHANGES.txt.


3.5.1 (2008-04-28)
------------------

- Reverted changes in 3.5.0.


3.5.0
-----

- Added the capability for exceptions to be formatted line-by-line.
  Unfortunately, also introduced a bug cause each line of the exception to be
  its own log message.


3.4.0 (2007-10-02)
------------------

- Updated package meta-data.


3.4.0b2 (2007-08-14)
--------------------

- Removed superfluous dependency on ``zope.deprecation``.


3.4.0b1 (2007-07-09)
--------------------

- Corresponds to the version of the ``zope.exceptions`` package shipped as
  part of the Zope 3.4.0b1 release.


3.2.0 (2006-01-05)
------------------

- Corresponds to the version of the ``zope.exceptions`` package shipped as part of
  the Zope 3.2.0 release.

- Deprecated the ``INotFoundError`` interface and the corresponding
  ``NotFoundError`` exception class, in favor of "standard" exceptions
  ``AttributeError``, ``KeyError``).  The deprecated items will be removed in
  Zope 3.3.


3.0.0 (2004-11-07)
------------------

- Corresponds to the version of the zope.exceptions package shipped as part of
  the Zope X3.0.0 release.