@@ -8,6 +8,8 @@ Changes
 - Fallback to traceback.format_tb when the formatter is called recursively.
   i.e. Don't let errors in the formatter pass silently.
 
+- Fix deprecated unittest functions: assert_ and assertEquals.
+
 3.6.1 (2010-07-06)
 ------------------
 
